# loggint_tests

./: .coverage  1.json  Dockerfile  docker-compose.yml  pyproject.toml
logging_testing/: formats.py  main.py
logging_testing/tests/: test_math_op.py
