[tool.poetry]
name = "logging-testing"
version = "0.1.0"
description = ""
authors = ["Alpha-Potat <luchinin.n@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
